@@ -1,4 +1,4 @@
 @set UPDATED 9 February 2003
 @set UPDATED-MONTH February 2003
-@set EDITION 1.7.3
-@set VERSION 1.7.3
+@set EDITION 1.7.3a
+@set VERSION 1.7.3a
