@@ -1,5 +1,7 @@
 2003-02-20  Alexandre Duret-Lutz  <adl@gnu.org>
 
+	* configure.in: Bump version to 1.7.3a.
+
 	* configure.in, NEWS: Bump version to 1.7.3.
 
 	* lib/am/texibuild.am (%SOURCE_SUFFIX%%DEST_SUFFIX%): Use $(...)
